2012-07-03 Alex Tutubalin <lexa@lexa.ru>
    === LibRaw 0.15 (Alpha1) ===
    1) API Changes:
     =>  Removed, because no one uses it:
          * LibRaw::dcraw_document_mode_processing (and C-API call)
          * Data field imgdata.color.color_flags

     =>  Removed, because internal logic changed:
          * LIBRAW_DECODER_4COMPONENTS
            Now unpack() unpacks RAW data in only two possible formats:
             i. imgdata.rawdata.raw_image[] - flat buffer with bayer data
              (one value per pixel) with masked pixels.
             ii. imgdata.rawdata.color_image - 4-components array (similar
              to imgdata.image) with 3 or 4 components per pixel and
              without masked pixels.

      =>  Changed:
           * imgdata.color.cblack[4] instead of [8] - for now cblack[4..7]
             (count of pixels used for black level calculation) is not used,
             so removed
            * LibRaw::fc() renamed to LibRaw::fcol() to maintain compatibility
             with dcraw internals

      => Temporary not working properly or disabled (to be fixed in next 
         Alpha-versions, see also TODO section below)
            * imgdata.params.cropbox[] - cropping not works yet, so disabled
            * LibRaw::subtract_black() - don't works properly, so not used
              in LibRaw internals until next Alpha

       => Added:
            * WF debanding code (banding suppression):
              int imgdata.params.wf_debanding - enables debanding
              float imgdata.params.wf_deband_threshold[4] - set threshold
              levels for debanding (in pixel values, so usual value is several units)
            * LibRaw::open_wfile(wchar_t *filename) (WIN32 only) - opens
              RAW filename passed in Windows unicode encoding.
            * imgdata.params.user_cblack[4] - allows to set per-channel
              black levels
   	    * User-provided data streams (derived from 